elco-salesforce/force-app/main/default/objects/Visit_Attendee__c/Visit_Attendee__c.object-meta.xml
<CustomObject>
  <label>Partecipante Visita</label>
  <pluralLabel>Partecipanti Visita</pluralLabel>
  <nameField>
    <label>Partecipante Number</label>
    <type>AutoNumber</type>
    <displayFormat>VA-{000000}</displayFormat>
  </nameField>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>