elco-salesforce/force-app/main/default/objects/Visit_Attendee__c/fields/Contact__c.field-meta.xml
<CustomField>
  <fullName>Contact__c</fullName>
  <label>Contatto</label>
  <type>Lookup</type>
  <referenceTo>Contact</referenceTo>
  <relationshipName>VisitAttendees</relationshipName>
  <relationshipLabel>Partecipazioni Visita</relationshipLabel>
  <deleteConstraint>Restrict</deleteConstraint>
  <required>true</required>
</CustomField>