elco-salesforce/force-app/main/default/objects/Visit_Attendee__c/fields/Email_Sent__c.field-meta.xml
<CustomField>
  <fullName>Email_Sent__c</fullName>
  <label>Email Inviata</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>