elco-salesforce/force-app/main/default/objects/Visit_Attendee__c/fields/Visit_Report__c.field-meta.xml
<CustomField>
  <fullName>Visit_Report__c</fullName>
  <label>Report Visita</label>
  <type>MasterDetail</type>
  <referenceTo>Visit_Report__c</referenceTo>
  <relationshipName>Attendees</relationshipName>
  <relationshipLabel>Partecipanti</relationshipLabel>
</CustomField>